<resources>
    <string name="app_name">Jitzimoto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_the_login">this is the login</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="this_is_the_sign_up_selector">this is the sign up selector</string>
    <string name="i_m_just_here_to_book_a_service">Im just here to book a service</string>
    <string name="this_is_a_the_biz_signup">this is a the biz signup</string>
    <string name="county">county</string>
    <string name="city_and_region">city and region</string>
    <string name="broad_business_category">broad business category</string>
    <string name="type_of_business">type of business</string>
    <string name="confirm_password">confirm password</string>
    <string name="password">password</string>
    <string name="business_name">business name</string>
    <string name="subcontractor">agent signup</string>
    <string name="please_check_your_email_for_a_verification_key">please check your email for a verification key</string>
    <string name="verify">verify</string>
    <string name="new_bookings">new bookings</string>
    <string name="search_local_businesses">search local businesses</string>
    <string name="my_services">my services</string>
    <string name="my_bookings">my bookings</string>
    <string name="my_profile">my profile</string>
    <string name="go">go</string>
    <string name="my_service_offerings">my service offerings</string>
    <string name="create_a_service_offering">create a service listing</string>
    <string name="service_name">service name</string>
    <string name="service_type">service type</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="starting_time">starting available time</string>
    <string name="ending_time">ending available time</string>
    <string name="create">create</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="edit">edit</string>
    <string name="service_booked">service booked</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string-array name="service_types">

    </string-array>
    <string-array name="nations">
        <item>canada</item>
        <item>us</item>
        <item>uk</item>
        <item>australia</item>
        <item>new zealand</item>
    </string-array>
    <string-array name="canada">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Northwest Territories</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
        

        <item>calgary, alberta</item>
        <item>edmonton, alberta</item>
        <item>ft-mcmurray, alberta</item>
        <item>lethbridge, alberta</item>
        <item>medicine-hat, alberta</item>
        <item>peace-river-country, alberta</item>
        <item>red-deer, alberta</item>

        <item>cariboo, British Columbia</item>
        <item>comox-valley, British Columbia</item>
        <item>fraser-valley, British Columbia</item>
        <item>kamloops, British Columbia</item>
        <item>kelowna-okanagan, British Columbia</item>
        <item>kootenays, British Columbia</item>
        <item>nanaimo, British Columbia</item>
        <item>prince-george, British Columbia</item>
        <item>skeena-bulkley, British Columbia</item>
        <item>sunshine-coast, British Columbia</item>
        <item>vancouver, British Columbia</item>
        <item>victoria, British Columbia</item>
        <item>whistler, British Columbia</item>
    </string-array>
    <string-array name="uk_regions">
        <item>East Midlands</item>
        <item>East of England</item>
        <item>London</item>
        <item>North East England</item>
        <item>North West England</item>
        <item>south East England</item>
        <item>south West England</item>
        <item>West Midlands</item>
        <item>Yorkshire and the Humber</item>
        <item>scotland</item>
        <item>Wales</item>
        <item>Northern Ireland</item>
        <item>Crown Dependencies</item>
    </string-array>
    <string-array name="australia">
        <item>New South Wales</item>
        <item>Queensland</item>
        <item>South Australia</item>
        <item>Tasmania</item>
        <item>Victoria</item>
        <item>Western Australia</item>
        <item>Australian Capital Territory</item>
        <item>Northern Territory</item>
    </string-array>
    <string-array name="new_Zealand">
        <item>new Zealand</item>
    </string-array>
    <string-array name="american_states">
        <item>ALABAMA</item>
        <item>ALASKA</item>
        <item>AMERICAN SAMOA</item>
        <item>ARIZONA</item>
        <item>ARKANSAS</item>
        <item>CALIFORNIA</item>
        <item>COLORADO</item>
        <item>CONNECTICUT</item>
        <item>DELAWARE</item>
        <item>DISTRICT OF COLUMBIA</item>
        <item>FEDERATED STATES OF MICRONESIA</item>
        <item>FLORIDA</item>
        <item>GEORGIA</item>
        <item>GUAM</item>
        <item>HAWAII</item>
        <item>IDAHO</item>
        <item>ILLINOIS</item>
        <item>INDIANA</item>
        <item>IOWA</item>
        <item>KANSAS</item>
        <item>KENTUCKY</item>
        <item>LOUISIANA</item>
        <item>MAINE</item>
        <item>MARSHALL ISLANDS</item>
        <item>MARYLAND</item>
        <item>MASSACHUSETTS</item>
        <item>MICHIGAN</item>
        <item>MINNESOTA</item>
        <item>MISSISSIPPI</item>
        <item>MISSOURI</item>
        <item>MONTANA</item>
        <item>NEBRASKA</item>
        <item>NEVADA</item>
        <item>NEW HAMPSHIRE</item>
        <item>NEW JERSEY</item>
        <item>NEW MEXICO</item>
        <item>NEW YORK</item>
        <item>NORTH CAROLINA</item>
        <item>NORTH DAKOTA</item>
        <item>NORTHERN MARIANA ISLANDS</item>
        <item>OHIO</item>
        <item>OKLAHOMA</item>
        <item>OREGON</item>
        <item>PALAU</item>
        <item>PENNSYLVANIA</item>
        <item>PUERTO RICO</item>
        <item>RHODE ISLAND</item>
        <item>SOUTH CAROLINA</item>
        <item>SOUTH DAKOTA</item>
        <item>TENNESSEE</item>
        <item>TEXAS</item>
        <item>UTAH</item>
        <item>VERMONT</item>
        <item>VIRGIN ISLANDS</item>
        <item>VIRGINIA</item>
        <item>WASHINGTON</item>
        <item>WEST VIRGINIA</item>
        <item>WISCONSIN</item>
        <item>WYOMING</item>

        

        

        <item>auburn, Alabama</item>
        <item>birmingham, Alabama</item>
        <item>dothan, Alabama</item>
        <item>florence muscle, Alabama</item>
        <item>shoals, Alabama</item>
        <item>gadsden-anniston, Alabama</item>
        <item>huntsville decatur, Alabama</item>
        <item>mobile, Alabama</item>
        <item>montgomery, Alabama</item>
        <item>tuscaloosa, Alabama</item>

        
        <item>anchorage-mat-su, alaska</item>
        <item>fairbanks, alaska</item>
        <item>kenai-peninsula, alaska</item>
        <item>southeast-alaska, alaska</item>
    </string-array>
    <string-array name="broadtypes">
        <item>advertising</item>
        <item>appliance and electronic repair</item>
        <item>beauty</item>
        <item>consultation</item>
        <item>creative</item>
        <item>delivery</item>
        <item>education</item>
        <item>entertainment</item>
        <item>fabric care</item>
        <item>finance</item>
        <item>food service and catering</item>
        <item>heath and wellness</item>
        <item>home care</item>
        <item>hospitality</item>
        <item>legal, taxation and immigration</item>
        <item>other</item>
        <item>pet</item>
        <item>promotion and advertising</item>
        <item>real estate and banking </item>
        <item>retail</item>
        <item>tailor</item>
        <item>travel</item>
        <item>adult</item>
    </string-array>
</resources>